fix: use env var for open router settings

--- a/.env.example
+++ b/.env.example
@@ -13,5 +13,7 @@ JWT_EXPIRY=168h
 # CORS settings
 ALLOW_ORIGINS=*
 
-# OpenRouter API key
+# OpenRouter settings
 OPENROUTER_API_KEY=your-openrouter-api-key
+OPENROUTER_MODEL=deepseek-chat
+OPENROUTER_BASE_URL=https://api.deepseek.com/chat/completions
