--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       - JWT_EXPIRY=${JWT_EXPIRY:-168h}
       - ALLOW_ORIGINS=${ALLOW_ORIGINS:-http://localhost:3000}
       - OPENROUTER_API_KEY=${OPENROUTER_API_KEY:-your-openrouter-api-key}
+      - OPENROUTER_MODEL=${OPENROUTER_MODEL:-deepseek-chat}
+      - OPENROUTER_BASE_URL=${OPENROUTER_BASE_URL:-https://api.deepseek.com/chat/completions}
     volumes:
       - ./.env:/app/.env
     restart: unless-stopped
